--- a/apps/back-end/package.json
+++ b/apps/back-end/package.json
@@ -62,6 +62,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
+    "sqlite3": "^5.1.7",
     "typeorm": "^0.3.20",
     "typeorm-extension": "^3.5.1"
   },
